--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Karla, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Karla, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -30,6 +30,10 @@ body {
   margin: 3rem;
   padding: 1rem;
   border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
@@ -54,7 +58,8 @@ button {
 }
 
 .frontpage__start-game {
-  
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 
@@ -71,3 +76,52 @@ li {
   list-style: none;
 }
 
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+
+/* .custom-radio input[type="radio"] {
+  display: none;
+}
+
+.custom-radio {
+  cursor: pointer;
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.custom-radio-button {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  position: relative;
+  margin-right: 10px;
+  transition: background 0.3s;
+}
+
+.custom-radio input[type="radio"]:checked+.custom-radio-button {
+  background: #000;
+}
+
+.custom-radio-button::after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.3s;
+}
+
+.custom-radio input[type="radio"]:checked+.custom-radio-button::after {
+  opacity: 1;
+} */
